--- a/style.css
+++ b/style.css
@@ -307,18 +307,7 @@ body {
     transition: transform 0.3s ease;
 }
 
-/* Rotate specific images */
-.gallery-item:nth-child(1) img,
-.gallery-item:nth-child(3) img {
-    transform: rotate(90deg);
-}
-
-.gallery-item:nth-child(1):hover img,
-.gallery-item:nth-child(3):hover img {
-    transform: rotate(90deg) scale(1.05);
-}
-
-.gallery-item:not(:nth-child(1)):not(:nth-child(3)):hover img {
+.gallery-item:hover img {
     transform: scale(1.05);
 }
 
