--- a/style.css
+++ b/style.css
@@ -580,12 +580,17 @@ footer {
     }
 
     .hero-content {
-        flex-direction: column;
+        flex-direction: column-reverse;
         text-align: center;
+        padding-top: 4rem;
     }
 
     .hero-left {
         text-align: center;
+    }
+
+    .hero-right {
+        margin-bottom: 2rem;
     }
 
     .hero-logo {
